# arpeggio

./: .gitignore  Cargo.toml  flake.nix
src/: config.rs  errors.rs  flags.rs  hsv.rs  io.rs  main.rs  palette.rs
