[package]
name = "arpeggio"
version = "0.1.0"
authors = ["Harrison Thorne <harrison.thorne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.3"
dirs = "2.0.2"
toml = "0.5.6"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
