[package]
name = "arpeggio"
version = "0.0.1"
authors = ["municorn <municorn@musicaloft.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = [ "derive" ] }
image = "0.23"
log = "0.4"          # A lightweight logging facade for Rust
palette = { version = "0.6", features = [ "serializing" ] }
serde = { version = "1.0", features = [ "derive" ] }
rayon = "1.5"
simplelog = "0.12"
toml = "0.5"
